# reading-catalog

./: .env.example  .gitignore  config.yaml  pyproject.toml  run_app.sh
data/: catalog.db.bak
src/: catalog_ui.py  config.py
src/pipeline/: curated.py  models.py  normalize.py
src/scripts/: fetch_openlibrary_fiction.py
src/sources/: googlebooks_client.py  hardcover_client.py  openlibrary_client.py
src/storage/: db.py  db_models.py
src/ui/: common.py
src/ui/pages/: curated_library.py  explore.py  working_shelf.py
tests/: test_db_upsert.py  test_library_status.py  test_models.py  test_normalize_googlebooks.py  test_normalize_hardcover.py  test_normalize_openlibrary.py  test_normalize_openlibrary_search.py  test_schema_upgrade.py
tests/fixtures/: edition_with_isbn10_only.json  edition_with_isbn13.json  googlebooks_volume_full.json  googlebooks_volume_isbn10_only.json  googlebooks_volume_no_ratings.json  googlebooks_volume_with_ratings.json  hardcover_books_row_with_cached_tags.json  hardcover_search_hit.json  openlibrary_search_doc.json  openlibrary_search_doc_with_isbn.json  subjects_fiction.json  work_detail_dict_desc.json  work_detail_plain_desc.json
