[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reading-catalog"
version = "0.1.0"
description = "Automated pipeline that discovers highly-rated, widely-read books into a personal browsable catalog"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "tenacity",
    "pydantic>=2",
    "sqlalchemy>=2",
    "pyyaml",
    "streamlit",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["src*"]
